Day 4 task 1 finished, task 2 not finished (skipping for a bit)